Ignore temporary and output images.

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ Problem Sets/Problem Set 3/Debug/
 *.pdb
 *.sdf
 *.opensdf
+Problem Sets/Problem Set 3/HW3_differenceImage.png
+Problem Sets/Problem Set 3/HW3_output.png
+Problem Sets/Problem Set 3/HW3_reference.png
