Ignore .user files.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ Problem Sets/Problem Set 3/HW3_differenceImage.png
 Problem Sets/Problem Set 3/HW3_output.png
 Problem Sets/Problem Set 3/HW3_reference.png
 Problem Sets/Problem Set 3/Problem Set 3.v12.suo
+*.user
