--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ Problem Sets/Problem Set 3/HW3_output.png
 Problem Sets/Problem Set 3/HW3_reference.png
 Problem Sets/Problem Set 3/Problem Set 3.v12.suo
 *.user
+Problem Sets/Problem Set 4/Debug/
+Problem Sets/Problem Set 4/Problem Set 4.v12.suo
