Ignore the default output file from running the tests.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ Problem Sets/Problem Set 3/Problem Set 3.v12.suo
 *.user
 Problem Sets/Problem Set 4/Debug/
 Problem Sets/Problem Set 4/Problem Set 4.v12.suo
+Problem Sets/Problem Set 4/HW4_output.png
