--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ Problem Sets/Problem Set 3/Problem Set 3.v12.suo
 Problem Sets/Problem Set 4/Debug/
 Problem Sets/Problem Set 4/Problem Set 4.v12.suo
 Problem Sets/Problem Set 4/HW4_output.png
+Problem Sets/Problem Set 4/Release/
