--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ Problem Sets/Problem Set 4/Debug/
 Problem Sets/Problem Set 4/Problem Set 4.v12.suo
 Problem Sets/Problem Set 4/HW4_output.png
 Problem Sets/Problem Set 4/Release/
+Problem Sets/Problem Set 5/Debug/
