--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ Problem Sets/Problem Set 4/HW4_output.png
 Problem Sets/Problem Set 4/Release/
 Problem Sets/Problem Set 5/Debug/
 Problem Sets/Problem Set 5/Release/
+*.suo
