Ignoring Problem Set 6 Debug directory.

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ Problem Sets/Problem Set 4/Release/
 Problem Sets/Problem Set 5/Debug/
 Problem Sets/Problem Set 5/Release/
 *.suo
+Problem Sets/Problem Set 6/Debug/
