Ignore output and intermediate images (hopefully correctly this time).

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ Problem Sets/Problem Set 5/Debug/
 Problem Sets/Problem Set 5/Release/
 *.suo
 Problem Sets/Problem Set 6/Debug/
+Problem Sets/Problem Set 6/HW6_differenceImage.png
+Problem Sets/Problem Set 6/HW6_reference.png
+Problem Sets/Problem Set 6/output.png
