Created project files for 'smooth' in the Final Assessment.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ Problem Sets/Problem Set 6/Debug/
 Problem Sets/Problem Set 6/HW6_differenceImage.png
 Problem Sets/Problem Set 6/HW6_reference.png
 Problem Sets/Problem Set 6/output.png
+Final/smooth/Debug/
