Ignored HW6_output.png.

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ Problem Sets/Problem Set 6/HW6_differenceImage.png
 Problem Sets/Problem Set 6/HW6_reference.png
 Problem Sets/Problem Set 6/output.png
 Problem Sets/Problem Set 6/Release/
+Problem Sets/Problem Set 6/HW6_output.png
